<resources>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">WishList</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_myOrders">My Orders</string>
    <string name="menu_myCart">My Cart</string>
    <string name="check_out">Check Out</string>
    <string name="placement">Order Placement</string>
    <string name="no_cart_item">No Item found on Cart</string>
    <string name="no_order">No Item found on Order History</string>
    <string name="no_wish_List">No Item found on Wish List</string>
    <string name="label_login">Login</string>
    <string name="no_records_found">No records found!</string>
    <string name="no_products_found">No products found!</string>
    <string name="label_sign_up">Don\'t have a account ? </string>
    <string name="create_lable">Create</string>
    <string name="label_skip">SKIP >>></string>
    <string name="label_forgot_password">Forgot Your Password?</string>
    <string name="label_Fra_forgot_password">Forgot Password</string>
    <string name="label_user_name">User Name</string>
    <string name="label_name">Name</string>
    <string name="label_password">Password</string>
    <string name="label_error_email">Enter Email Id</string>
    <string name="label_error_password">Enter Password</string>
    <string name="label_send">Send</string>
    <string name="label_hint_email">Enter your Email</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_sign_btn">Sign Up</string>

    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="error_first_name">Enter First Name</string>
    <string name="error_last_name">Enter Last Name</string>
    <string name="error_email">Enter Email Id</string>
    <string name="error_password">Enter Password</string>
    <string name="error_mobile">Enter Mobile No</string>
    <string name="error_terms">Kindly accept the teams and condition policy...</string>
    <string name="label_accept">Accept</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_terms_and_condition">Terms and Condition</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="Rs">\u20B9</string>
    <string name="rs">\u20A8</string>
    <string name="label_products">Products</string>
    <string name="label_products_details">Products Details</string>
    <string name="label_add_to_cart">Add To Cart</string>
    <string name="description">Description</string>
    <string name="label_exit">Are you sure want to exit? </string>
    <string name="address">Address</string>
    <string name="address_one">Address One</string>
    <string name="address_two">Address Two</string>
    <string name="add_address">Add Address</string>
    <string name="earned_points">Earned</string>
    <string name="spend_points">Spend</string>
    <string name="balance_points">Balance</string>
    <string name="add_new_address">Add new address</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">Faq</string>
    <string name="return_policy">Return Policy</string>
    <string name="logout">Logout</string>
    <string name="label_about_us">About Us</string>
    <string name="label_privacy">Privacy</string>
    <string name="label_city">City</string>
    <string name="label_state">State</string>
    <string name="label_country">Country</string>
    <string name="label_area">Area</string>
    <string name="label_add_address">Add Address</string>
    <string name="label_delete_address">Delete Address</string>
    <string name="label_pinCode">PinCode</string>
    <string name="label_add_name">Enter your Name</string>
    <string name="label_add_last_name">Enter your Last Name</string>
    <string name="label_add_address_one">Enter your Address One</string>
    <string name="label_add_address_two">Enter your Address Two</string>
    <string name="label_add_mobile">Enter your Mobile</string>
    <string name="label_add_city">Enter your City</string>
    <string name="label_add_state">Enter your State</string>
    <string name="label_add_country">Enter your Country</string>
    <string name="label_add_pinCode">Enter your PinCode</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="view_cart">View Cart</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub Total (tax incl.)</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>
    <string name="coupon_code">Coupon code</string>
    <string name="coupon_offer">Coupon offer</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="label_shop_by_category">Shop by Category</string>
    <string name="label_whats">Combo</string>
    <string name="label_default_address">Default Address</string>

    <string name="top_seller_label">Top Seller</string>
<!--    <string name="app_name">Harina</string>-->


    <string name="some_error_occurred">Some error occurred...</string>
    <string name="transaction_cancelled_by_user">Transaction cancelled by user</string>


    <string name="verify_your_number">Verify Your Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="phone_auth_subtitle">Please enter your phone number to verify your account</string>
    <string name="otp_auth_subtitle">Please enter the OTP received in your number</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="send">send otp</string>
    <string name="otp">Otp</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="fb_login_protocol_scheme">fb164027639968671</string>
    <string name="fb_client_token">fadaf86950d49d2d3016453727146496</string>
    <string name="fb_app_id">164027639968671</string>
    <string name="app_update_downloaded">An update has just been downloaded.</string>
    <string name="restart">RESTART</string>

    <string name="change_password">Change Password</string>
    <string name="label_current_password_btn">Current Password</string>
    <string name="label_new_password_btn">New Password</string>
    <string name="label_confirm_password_btn">Confirm Password</string>

    <string name="error_current_password">Enter Current Password</string>
    <string name="error_new_password">Enter New Password</string>
    <string name="error_confirm_password">Enter Confirm Password</string>
    <string name="error_mismatch_password">Password confirmation does not match</string>

</resources>