<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_favorite"
        android:title="@string/menu_favourites" />
    <item
        android:id="@+id/myOrdersFragment"
        android:icon="@drawable/ic_shopping"
        android:title="@string/menu_myOrders" />
    <item
        android:id="@+id/myCartFragment"
        android:icon="@drawable/ic_cart"
        android:title="@string/menu_myCart" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />


</menu>
