<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="false"
    tools:context=".ui.ForgetActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/spacing_200"
        android:layout_height="wrap_content">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbFfrogetpassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/label_sign_btn"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/purple_500"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix">
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"

        android:orientation="vertical"
        android:padding="@dimen/spacing_normal"
        app:layout_constraintTop_toBottomOf="@+id/tbFfrogetpassword">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvFYourName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_20dp"
            android:hint="@string/label_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFFirstName"
                style="@style/EditText"
                android:imeOptions="actionNext"
                android:maxLines="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFLastName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/label_last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFLastName"
                style="@style/EditText"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFEmail"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/label_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFEmail"
                style="@style/EditText"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFPassword"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"

            android:hint="@string/label_password"
            app:passwordToggleEnabled="true">

            <!--            app:passwordToggleDrawable="@drawable/eye_password"-->

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFPassword"
                style="@style/EditText"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFMobile"
            style="@style/TextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:hint="@string/label_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFMobile"
                style="@style/EditText"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llFTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbFTermsAndCondition"
                android:layout_width="wrap_content"
                android:enabled="true"
                android:checked="false"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFTermsAndCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/label_terms_and_condition"
                android:textSize="@dimen/font_small" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_Fbutton"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/label_sign_btn"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_16"
            app:cornerRadius="@dimen/spacing_medium" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pbFRSignUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>