<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.FavoriteFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbCart"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="@color/purple_500"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_myCart"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/content_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbCart"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_card_view" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        android:visibility="gone"
        android:id="@+id/tvEmptyCart"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no_cart_item" />

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/content_order_total"
        android:id="@+id/content_order"
        android:padding="@dimen/margin_5"
        android:layout_marginStart="@dimen/spacing_18"
        android:layout_marginEnd="@dimen/spacing_18"
        app:layout_constraintBottom_toTopOf="@+id/btnCheckout"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_60"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginEnd="@dimen/spacing_normal"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/check_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="@dimen/spacing_small" />

</androidx.constraintlayout.widget.ConstraintLayout>